@@ -7,6 +7,8 @@ Revision history for JSON-Schema-Modern
             an evaluator object that was loaded from a serialized object
           - fixed custom format definitions to not allow 'integer' types, as
             per the specification
+          - support custom format definitions that operate on more than one
+            core data type
 
 0.578     2023-12-29 23:13:44Z
           - remove use of JSON::MaybeXS, to avoid potential use of JSON::XS;
